--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git+https://github.com/Heavenjes/IOT_Switch.git"
   },
+  "engines": {
+    "node": "10.16"
+  },
   "author": "Jess",
   "license": "ISC",
   "bugs": {
